Fix alignment and use divs for dataset-status as it's not semantically a list

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -26,21 +26,20 @@
   align-items: flex-start;
 }
 
-.dataset-status-list {
-  list-style: none;
-  padding: 0;
-  margin: 0 0 govuk-spacing(6) 0;
+.dataset-status {
+  margin-bottom: govuk-spacing(6);
 
   display: flex;
-  column-gap: govuk-spacing(3);
+  column-gap: govuk-spacing(6);
 }
 
-.dataset-status-list--item {
+.dataset-status--item {
   background-color: $govuk-brand-colour;
   color: govuk-colour("white");
 
   padding: govuk-spacing(2) govuk-spacing(3);
-  width: calc((100% / 3) - govuk-spacing(3));
+  flex-grow: 1;
+  flex-basis: 0;
 
   @include govuk-font($size: 24, $weight: bold);
 }
